Adding all the cups cards

--- a/index.html
+++ b/index.html
@@ -76,9 +76,24 @@
                     <img src="/tarot-card-images/pentacles/10-pents.jpg" alt="Tarot card image of the ten of pentacles" id="10-pents" class="" style="z-index: 46;">
                     <img src="/tarot-card-images/pentacles/page-pents.jpg" alt="Tarot card image of the page of pentacles" id="page-pents" class="" style="z-index: 47;">
                     <img src="/tarot-card-images/pentacles/knight-pents.jpg" alt="Tarot card image of the knigght of pentacles" id="knight-pents" class="" style="z-index: 48;">
-                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="visible" style="z-index: 49;">
-                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="visible" style="z-index: 50;">
+                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="" style="z-index: 49;">
+                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="" style="z-index: 50;">
 
+                    <!-- Cups -->
+                    <img src="/tarot-card-images/cups/1-cups.jpg" alt="Tarot card image of the ace of cups" id="1-cups" class="" style="z-index: 51;">
+                    <img src="/tarot-card-images/cups/2-cups.jpg" alt="Tarot card image of the two of cups" id="2-cups" class="" style="z-index: 52;">
+                    <img src="/tarot-card-images/cups/3-cups.jpg" alt="Tarot card image of the three of cups" id="3-cups" class="" style="z-index: 53;">
+                    <img src="/tarot-card-images/cups/4-cups.jpg" alt="Tarot card image of the four of cups" id="4-cups" class="" style="z-index: 54;">
+                    <img src="/tarot-card-images/cups/5-cups.jpg" alt="Tarot card image of the five of cups" id="5-cups" class="" style="z-index: 55;">
+                    <img src="/tarot-card-images/cups/6-cups.jpg" alt="Tarot card image of the six of cups" id="6-cups" class="" style="z-index: 56;">
+                    <img src="/tarot-card-images/cups/7-cups.jpg" alt="Tarot card image of the seven of cups" id="7-cups" class="" style="z-index: 57;">
+                    <img src="/tarot-card-images/cups/8-cups.jpg" alt="Tarot card image of the eight of cups" id="8-cups" class="" style="z-index: 58;">
+                    <img src="/tarot-card-images/cups/9-cups.jpg" alt="Tarot card image of the nine of cups" id="9-cups" class="" style="z-index: 59;">
+                    <img src="/tarot-card-images/cups/10-cups.jpg" alt="Tarot card image of the ten of cups" id="10-cups" class="" style="z-index: 60;">
+                    <img src="/tarot-card-images/cups/page-cups.jpg" alt="Tarot card image of the page of cups" id="page-cups" class="" style="z-index: 61;">
+                    <img src="/tarot-card-images/cups/knight-cups.jpg" alt="Tarot card image of the knight of cups" id="knight-cups" class="" style="z-index: 62;">
+                    <img src="/tarot-card-images/cups/queen-cups.jpg" alt="Tarot card image of the queen of cups" id="queen-cups" class="" style="z-index: 63;">
+                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="visible" style="z-index: 64;">
 
                 </div>
                 <div class="tarot-card-display__container" id="card2">
@@ -138,6 +153,21 @@
                     <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="visible" style="z-index: 49;">
                     <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="visible" style="z-index: 50;">
 
+                    <!-- Cups -->
+                    <img src="/tarot-card-images/cups/1-cups.jpg" alt="Tarot card image of the ace of cups" id="1-cups" class="visible" style="z-index: 51;">
+                    <img src="/tarot-card-images/cups/2-cups.jpg" alt="Tarot card image of the two of cups" id="2-cups" class="visible" style="z-index: 52;">
+                    <img src="/tarot-card-images/cups/3-cups.jpg" alt="Tarot card image of the three of cups" id="3-cups" class="visible" style="z-index: 53;">
+                    <img src="/tarot-card-images/cups/4-cups.jpg" alt="Tarot card image of the four of cups" id="4-cups" class="visible" style="z-index: 54;">
+                    <img src="/tarot-card-images/cups/5-cups.jpg" alt="Tarot card image of the five of cups" id="5-cups" class="visible" style="z-index: 55;">
+                    <img src="/tarot-card-images/cups/6-cups.jpg" alt="Tarot card image of the six of cups" id="6-cups" class="visible" style="z-index: 56;">
+                    <img src="/tarot-card-images/cups/7-cups.jpg" alt="Tarot card image of the seven of cups" id="7-cups" class="visible" style="z-index: 57;">
+                    <img src="/tarot-card-images/cups/8-cups.jpg" alt="Tarot card image of the eight of cups" id="8-cups" class="visible" style="z-index: 58;">
+                    <img src="/tarot-card-images/cups/9-cups.jpg" alt="Tarot card image of the nine of cups" id="9-cups" class="visible" style="z-index: 59;">
+                    <img src="/tarot-card-images/cups/10-cups.jpg" alt="Tarot card image of the ten of cups" id="10-cups" class="visible" style="z-index: 60;">
+                    <img src="/tarot-card-images/cups/page-cups.jpg" alt="Tarot card image of the page of cups" id="page-cups" class="visible" style="z-index: 61;">
+                    <img src="/tarot-card-images/cups/knight-cups.jpg" alt="Tarot card image of the knight of cups" id="knight-cups" class="visible" style="z-index: 62;">
+                    <img src="/tarot-card-images/cups/queen-cups.jpg" alt="Tarot card image of the queen of cups" id="queen-cups" class="visible" style="z-index: 63;">
+                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="visible" style="z-index: 64;">
 
                 </div>
                 <div class="tarot-card-display__container" id="card3">
@@ -193,8 +223,25 @@
                     <img src="/tarot-card-images/pentacles/10-pents.jpg" alt="Tarot card image of the ten of pentacles" id="10-pents" class="" style="z-index: 46;">
                     <img src="/tarot-card-images/pentacles/page-pents.jpg" alt="Tarot card image of the page of pentacles" id="page-pents" class="" style="z-index: 47;">
                     <img src="/tarot-card-images/pentacles/knight-pents.jpg" alt="Tarot card image of the knigght of pentacles" id="knight-pents" class="" style="z-index: 48;">
-                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="visible" style="z-index: 49;">
-                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="visible" style="z-index: 50;">
+                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="" style="z-index: 49;">
+                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="" style="z-index: 50;">
+
+                    <!-- Cups -->
+                    <img src="/tarot-card-images/cups/1-cups.jpg" alt="Tarot card image of the ace of cups" id="1-cups" class="" style="z-index: 51;">
+                    <img src="/tarot-card-images/cups/2-cups.jpg" alt="Tarot card image of the two of cups" id="2-cups" class="" style="z-index: 52;">
+                    <img src="/tarot-card-images/cups/3-cups.jpg" alt="Tarot card image of the three of cups" id="3-cups" class="" style="z-index: 53;">
+                    <img src="/tarot-card-images/cups/4-cups.jpg" alt="Tarot card image of the four of cups" id="4-cups" class="" style="z-index: 54;">
+                    <img src="/tarot-card-images/cups/5-cups.jpg" alt="Tarot card image of the five of cups" id="5-cups" class="" style="z-index: 55;">
+                    <img src="/tarot-card-images/cups/6-cups.jpg" alt="Tarot card image of the six of cups" id="6-cups" class="" style="z-index: 56;">
+                    <img src="/tarot-card-images/cups/7-cups.jpg" alt="Tarot card image of the seven of cups" id="7-cups" class="" style="z-index: 57;">
+                    <img src="/tarot-card-images/cups/8-cups.jpg" alt="Tarot card image of the eight of cups" id="8-cups" class="" style="z-index: 58;">
+                    <img src="/tarot-card-images/cups/9-cups.jpg" alt="Tarot card image of the nine of cups" id="9-cups" class="" style="z-index: 59;">
+                    <img src="/tarot-card-images/cups/9-cups.jpg" alt="Tarot card image of the nine of cups" id="9-cups" class="" style="z-index: 59;">
+                    <img src="/tarot-card-images/cups/10-cups.jpg" alt="Tarot card image of the ten of cups" id="10-cups" class="" style="z-index: 60;">
+                    <img src="/tarot-card-images/cups/page-cups.jpg" alt="Tarot card image of the page of cups" id="page-cups" class="" style="z-index: 61;">
+                    <img src="/tarot-card-images/cups/knight-cups.jpg" alt="Tarot card image of the knight of cups" id="knight-cups" class="" style="z-index: 62;">
+                    <img src="/tarot-card-images/cups/queen-cups.jpg" alt="Tarot card image of the queen of cups" id="queen-cups" class="visible" style="z-index: 63;">
+                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="visible" style="z-index: 64;">
 
                 </div>
             </div>
