Added all the cards

--- a/index.html
+++ b/index.html
@@ -93,7 +93,23 @@
                     <img src="/tarot-card-images/cups/page-cups.jpg" alt="Tarot card image of the page of cups" id="page-cups" class="" style="z-index: 61;">
                     <img src="/tarot-card-images/cups/knight-cups.jpg" alt="Tarot card image of the knight of cups" id="knight-cups" class="" style="z-index: 62;">
                     <img src="/tarot-card-images/cups/queen-cups.jpg" alt="Tarot card image of the queen of cups" id="queen-cups" class="" style="z-index: 63;">
-                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="visible" style="z-index: 64;">
+                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="" style="z-index: 64;">
+
+                     <!-- Swords -->
+                     <img src="/tarot-card-images/swords/1-swords.jpg" alt="Tarot card image of the ace of swords" id="1-swords" class="" style="z-index: 65;">
+                     <img src="/tarot-card-images/swords/2-swords.jpg" alt="Tarot card image of the two of swords" id="2-swords" class="" style="z-index: 66;">
+                     <img src="/tarot-card-images/swords/3-swords.jpg" alt="Tarot card image of the three of swords" id="3-swords" class="" style="z-index: 67;">
+                     <img src="/tarot-card-images/swords/4-swords.jpg" alt="Tarot card image of the four of swords" id="4-swords" class="" style="z-index: 68;">
+                     <img src="/tarot-card-images/swords/5-swords.jpg" alt="Tarot card image of the five of swords" id="5-swords" class="" style="z-index: 69;">
+                     <img src="/tarot-card-images/swords/6-swords.jpg" alt="Tarot card image of the six of swords" id="6-swords" class="" style="z-index: 70;">
+                     <img src="/tarot-card-images/swords/7-swords.jpg" alt="Tarot card image of the seven of swords" id="7-swords" class="" style="z-index: 71;">
+                     <img src="/tarot-card-images/swords/8-swords.jpg" alt="Tarot card image of the eight of swords" id="8-swords" class="" style="z-index: 72;">
+                     <img src="/tarot-card-images/swords/9-swords.jpg" alt="Tarot card image of the nine of swords" id="9-swords" class="" style="z-index: 73;">
+                     <img src="/tarot-card-images/swords/10-swords.jpg" alt="Tarot card image of the ten of swords" id="10-swords" class="" style="z-index: 74;">
+                     <img src="/tarot-card-images/swords/page-swords.jpg" alt="Tarot card image of the page of swords" id="page-swords" class="" style="z-index: 75;">
+                     <img src="/tarot-card-images/swords/knight-swords.jpeg" alt="Tarot card image of the knight of swords" id="knight-swords" class="" style="z-index: 76;">
+                     <img src="/tarot-card-images/swords/queen-swords.jpg" alt="Tarot card image of the queen of swords" id="queen-swords" class="" style="z-index: 77;">
+                     <img src="/tarot-card-images/swords/king-swords.jpeg" alt="Tarot card image of the king of swords" id="king-swords" class="visible" style="z-index: 78;">
 
                 </div>
                 <div class="tarot-card-display__container" id="card2">
@@ -135,39 +151,55 @@
                     <img src="/tarot-card-images/page-wands.jpg" alt="Tarot card image of the page of wands" id="page-wands" class="" style="z-index: 33;">
                     <img src="/tarot-card-images/knight-wands.jpg" alt="Tarot card image of the knight of wands" id="knight-wands" class="" style="z-index: 34;">
                     <img src="/tarot-card-images/queen-wands.jpeg" alt="Tarot card image of the queen of wands" id="queen-wands" class="" style="z-index: 35;">
-                    <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="visible" style="z-index: 36;">
+                    <img src="/tarot-card-images/king-wands.jpg" alt="Tarot card image of the king of wands" id="king-wands" class="" style="z-index: 36;">
 
                     <!-- Pentacles also referred to as coins -->
-                    <img src="/tarot-card-images/pentacles/1-pents.jpg" alt="Tarot card image of the ace of pentacles" id="1-pents" class="visible" style="z-index: 37;">
-                    <img src="/tarot-card-images/pentacles/2-pents.jpg" alt="Tarot card image of the two of pentacles" id="2-pents" class="visible" style="z-index: 38;">
-                    <img src="/tarot-card-images/pentacles/3-pents.jpg" alt="Tarot card image of the three of pentacles" id="3-pents" class="visible" style="z-index: 39;">
-                    <img src="/tarot-card-images/pentacles/4-pents.jpg" alt="Tarot card image of the four of pentacles" id="4-pents" class="visible" style="z-index: 40;">
-                    <img src="/tarot-card-images/pentacles/5-pents.jpg" alt="Tarot card image of the five of pentacles" id="5-pents" class="visible" style="z-index: 41;">
-                    <img src="/tarot-card-images/pentacles/6-pents.jpg" alt="Tarot card image of the six of pentacles" id="6-pents" class="visible" style="z-index: 42;">
-                    <img src="/tarot-card-images/pentacles/7-pents.jpg" alt="Tarot card image of the seven of pentacles" id="7-pents" class="visible" style="z-index: 43;">
-                    <img src="/tarot-card-images/pentacles/8-pents.jpg" alt="Tarot card image of the eight of pentacles" id="8-pents" class="visible" style="z-index: 44;">
-                    <img src="/tarot-card-images/pentacles/9-pents.jpg" alt="Tarot card image of the nine of pentacles" id="9-pents" class="visible" style="z-index: 45;">
-                    <img src="/tarot-card-images/pentacles/10-pents.jpg" alt="Tarot card image of the ten of pentacles" id="10-pents" class="visible" style="z-index: 46;">
-                    <img src="/tarot-card-images/pentacles/page-pents.jpg" alt="Tarot card image of the page of pentacles" id="page-pents" class="visible" style="z-index: 47;">
+                    <img src="/tarot-card-images/pentacles/1-pents.jpg" alt="Tarot card image of the ace of pentacles" id="1-pents" class="" style="z-index: 37;">
+                    <img src="/tarot-card-images/pentacles/2-pents.jpg" alt="Tarot card image of the two of pentacles" id="2-pents" class="" style="z-index: 38;">
+                    <img src="/tarot-card-images/pentacles/3-pents.jpg" alt="Tarot card image of the three of pentacles" id="3-pents" class="" style="z-index: 39;">
+                    <img src="/tarot-card-images/pentacles/4-pents.jpg" alt="Tarot card image of the four of pentacles" id="4-pents" class="" style="z-index: 40;">
+                    <img src="/tarot-card-images/pentacles/5-pents.jpg" alt="Tarot card image of the five of pentacles" id="5-pents" class="" style="z-index: 41;">
+                    <img src="/tarot-card-images/pentacles/6-pents.jpg" alt="Tarot card image of the six of pentacles" id="6-pents" class="" style="z-index: 42;">
+                    <img src="/tarot-card-images/pentacles/7-pents.jpg" alt="Tarot card image of the seven of pentacles" id="7-pents" class="" style="z-index: 43;">
+                    <img src="/tarot-card-images/pentacles/8-pents.jpg" alt="Tarot card image of the eight of pentacles" id="8-pents" class="" style="z-index: 44;">
+                    <img src="/tarot-card-images/pentacles/9-pents.jpg" alt="Tarot card image of the nine of pentacles" id="9-pents" class="" style="z-index: 45;">
+                    <img src="/tarot-card-images/pentacles/10-pents.jpg" alt="Tarot card image of the ten of pentacles" id="10-pents" class="" style="z-index: 46;">
+                    <img src="/tarot-card-images/pentacles/page-pents.jpg" alt="Tarot card image of the page of pentacles" id="page-pents" class="" style="z-index: 47;">
                     <img src="/tarot-card-images/pentacles/knight-pents.jpg" alt="Tarot card image of the knight of pentacles" id="knight-pents" class="" style="z-index: 48;">
-                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="visible" style="z-index: 49;">
-                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="visible" style="z-index: 50;">
+                    <img src="/tarot-card-images/pentacles/queen-pents.jpg" alt="Tarot card image of the queen of pentacles" id="queen-pents" class="" style="z-index: 49;">
+                    <img src="/tarot-card-images/pentacles/king-pents.jpg" alt="Tarot card image of the king of pentacles" id="king-pents" class="" style="z-index: 50;">
 
                     <!-- Cups -->
-                    <img src="/tarot-card-images/cups/1-cups.jpg" alt="Tarot card image of the ace of cups" id="1-cups" class="visible" style="z-index: 51;">
-                    <img src="/tarot-card-images/cups/2-cups.jpg" alt="Tarot card image of the two of cups" id="2-cups" class="visible" style="z-index: 52;">
-                    <img src="/tarot-card-images/cups/3-cups.jpg" alt="Tarot card image of the three of cups" id="3-cups" class="visible" style="z-index: 53;">
-                    <img src="/tarot-card-images/cups/4-cups.jpg" alt="Tarot card image of the four of cups" id="4-cups" class="visible" style="z-index: 54;">
-                    <img src="/tarot-card-images/cups/5-cups.jpg" alt="Tarot card image of the five of cups" id="5-cups" class="visible" style="z-index: 55;">
-                    <img src="/tarot-card-images/cups/6-cups.jpg" alt="Tarot card image of the six of cups" id="6-cups" class="visible" style="z-index: 56;">
-                    <img src="/tarot-card-images/cups/7-cups.jpg" alt="Tarot card image of the seven of cups" id="7-cups" class="visible" style="z-index: 57;">
-                    <img src="/tarot-card-images/cups/8-cups.jpg" alt="Tarot card image of the eight of cups" id="8-cups" class="visible" style="z-index: 58;">
-                    <img src="/tarot-card-images/cups/9-cups.jpg" alt="Tarot card image of the nine of cups" id="9-cups" class="visible" style="z-index: 59;">
-                    <img src="/tarot-card-images/cups/10-cups.jpg" alt="Tarot card image of the ten of cups" id="10-cups" class="visible" style="z-index: 60;">
-                    <img src="/tarot-card-images/cups/page-cups.jpg" alt="Tarot card image of the page of cups" id="page-cups" class="visible" style="z-index: 61;">
-                    <img src="/tarot-card-images/cups/knight-cups.jpg" alt="Tarot card image of the knight of cups" id="knight-cups" class="visible" style="z-index: 62;">
-                    <img src="/tarot-card-images/cups/queen-cups.jpg" alt="Tarot card image of the queen of cups" id="queen-cups" class="visible" style="z-index: 63;">
-                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="visible" style="z-index: 64;">
+                    <img src="/tarot-card-images/cups/1-cups.jpg" alt="Tarot card image of the ace of cups" id="1-cups" class="" style="z-index: 51;">
+                    <img src="/tarot-card-images/cups/2-cups.jpg" alt="Tarot card image of the two of cups" id="2-cups" class="" style="z-index: 52;">
+                    <img src="/tarot-card-images/cups/3-cups.jpg" alt="Tarot card image of the three of cups" id="3-cups" class="" style="z-index: 53;">
+                    <img src="/tarot-card-images/cups/4-cups.jpg" alt="Tarot card image of the four of cups" id="4-cups" class="" style="z-index: 54;">
+                    <img src="/tarot-card-images/cups/5-cups.jpg" alt="Tarot card image of the five of cups" id="5-cups" class="" style="z-index: 55;">
+                    <img src="/tarot-card-images/cups/6-cups.jpg" alt="Tarot card image of the six of cups" id="6-cups" class="" style="z-index: 56;">
+                    <img src="/tarot-card-images/cups/7-cups.jpg" alt="Tarot card image of the seven of cups" id="7-cups" class="" style="z-index: 57;">
+                    <img src="/tarot-card-images/cups/8-cups.jpg" alt="Tarot card image of the eight of cups" id="8-cups" class="" style="z-index: 58;">
+                    <img src="/tarot-card-images/cups/9-cups.jpg" alt="Tarot card image of the nine of cups" id="9-cups" class="" style="z-index: 59;">
+                    <img src="/tarot-card-images/cups/10-cups.jpg" alt="Tarot card image of the ten of cups" id="10-cups" class="" style="z-index: 60;">
+                    <img src="/tarot-card-images/cups/page-cups.jpg" alt="Tarot card image of the page of cups" id="page-cups" class="" style="z-index: 61;">
+                    <img src="/tarot-card-images/cups/knight-cups.jpg" alt="Tarot card image of the knight of cups" id="knight-cups" class="" style="z-index: 62;">
+                    <img src="/tarot-card-images/cups/queen-cups.jpg" alt="Tarot card image of the queen of cups" id="queen-cups" class="" style="z-index: 63;">
+                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="" style="z-index: 64;">
+
+                    <!-- Swords -->
+                    <img src="/tarot-card-images/swords/1-swords.jpg" alt="Tarot card image of the ace of swords" id="1-swords" class="" style="z-index: 65;">
+                    <img src="/tarot-card-images/swords/2-swords.jpg" alt="Tarot card image of the two of swords" id="2-swords" class="" style="z-index: 66;">
+                    <img src="/tarot-card-images/swords/3-swords.jpg" alt="Tarot card image of the three of swords" id="3-swords" class="" style="z-index: 67;">
+                    <img src="/tarot-card-images/swords/4-swords.jpg" alt="Tarot card image of the four of swords" id="4-swords" class="" style="z-index: 68;">
+                    <img src="/tarot-card-images/swords/5-swords.jpg" alt="Tarot card image of the five of swords" id="5-swords" class="" style="z-index: 69;">
+                    <img src="/tarot-card-images/swords/6-swords.jpg" alt="Tarot card image of the six of swords" id="6-swords" class="" style="z-index: 70;">
+                    <img src="/tarot-card-images/swords/7-swords.jpg" alt="Tarot card image of the seven of swords" id="7-swords" class="" style="z-index: 71;">
+                    <img src="/tarot-card-images/swords/8-swords.jpg" alt="Tarot card image of the eight of swords" id="8-swords" class="" style="z-index: 72;">
+                    <img src="/tarot-card-images/swords/9-swords.jpg" alt="Tarot card image of the nine of swords" id="9-swords" class="" style="z-index: 73;">
+                    <img src="/tarot-card-images/swords/10-swords.jpg" alt="Tarot card image of the ten of swords" id="10-swords" class="" style="z-index: 74;">
+                    <img src="/tarot-card-images/swords/page-swords.jpg" alt="Tarot card image of the page of swords" id="page-swords" class="" style="z-index: 75;">
+                    <img src="/tarot-card-images/swords/knight-swords.jpeg" alt="Tarot card image of the knight of swords" id="knight-swords" class="" style="z-index: 76;">
+                    <img src="/tarot-card-images/swords/queen-swords.jpg" alt="Tarot card image of the queen of swords" id="queen-swords" class="" style="z-index: 77;">
+                    <img src="/tarot-card-images/swords/king-swords.jpeg" alt="Tarot card image of the king of swords" id="king-swords" class="visible" style="z-index: 78;">
 
                 </div>
                 <div class="tarot-card-display__container" id="card3">
@@ -240,8 +272,24 @@
                     <img src="/tarot-card-images/cups/10-cups.jpg" alt="Tarot card image of the ten of cups" id="10-cups" class="" style="z-index: 60;">
                     <img src="/tarot-card-images/cups/page-cups.jpg" alt="Tarot card image of the page of cups" id="page-cups" class="" style="z-index: 61;">
                     <img src="/tarot-card-images/cups/knight-cups.jpg" alt="Tarot card image of the knight of cups" id="knight-cups" class="" style="z-index: 62;">
-                    <img src="/tarot-card-images/cups/queen-cups.jpg" alt="Tarot card image of the queen of cups" id="queen-cups" class="visible" style="z-index: 63;">
-                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="visible" style="z-index: 64;">
+                    <img src="/tarot-card-images/cups/queen-cups.jpg" alt="Tarot card image of the queen of cups" id="queen-cups" class="" style="z-index: 63;">
+                    <img src="/tarot-card-images/cups/king-cups.jpg" alt="Tarot card image of the king of cups" id="king-cups" class="" style="z-index: 64;">
+
+                     <!-- Swords -->
+                     <img src="/tarot-card-images/swords/1-swords.jpg" alt="Tarot card image of the ace of swords" id="1-swords" class="" style="z-index: 65;">
+                     <img src="/tarot-card-images/swords/2-swords.jpg" alt="Tarot card image of the two of swords" id="2-swords" class="" style="z-index: 66;">
+                     <img src="/tarot-card-images/swords/3-swords.jpg" alt="Tarot card image of the three of swords" id="3-swords" class="" style="z-index: 67;">
+                     <img src="/tarot-card-images/swords/4-swords.jpg" alt="Tarot card image of the four of swords" id="4-swords" class="" style="z-index: 68;">
+                     <img src="/tarot-card-images/swords/5-swords.jpg" alt="Tarot card image of the five of swords" id="5-swords" class="visible" style="z-index: 69;">
+                     <img src="/tarot-card-images/swords/6-swords.jpg" alt="Tarot card image of the six of swords" id="6-swords" class="visible" style="z-index: 70;">
+                     <img src="/tarot-card-images/swords/7-swords.jpg" alt="Tarot card image of the seven of swords" id="7-swords" class="visible" style="z-index: 71;">
+                     <img src="/tarot-card-images/swords/8-swords.jpg" alt="Tarot card image of the eight of swords" id="8-swords" class="visible" style="z-index: 72;">
+                     <img src="/tarot-card-images/swords/9-swords.jpg" alt="Tarot card image of the nine of swords" id="9-swords" class="visible" style="z-index: 73;">
+                     <img src="/tarot-card-images/swords/10-swords.jpg" alt="Tarot card image of the ten of swords" id="10-swords" class="visible" style="z-index: 74;">
+                     <img src="/tarot-card-images/swords/page-swords.jpg" alt="Tarot card image of the page of swords" id="page-swords" class="visible" style="z-index: 75;">
+                     <img src="/tarot-card-images/swords/knight-swords.jpeg" alt="Tarot card image of the knight of swords" id="knight-swords" class="visible" style="z-index: 76;">
+                     <img src="/tarot-card-images/swords/queen-swords.jpg" alt="Tarot card image of the queen of swords" id="queen-swords" class="visible" style="z-index: 77;">
+                     <img src="/tarot-card-images/swords/king-swords.jpeg" alt="Tarot card image of the king of swords" id="king-swords" class="visible" style="z-index: 78;">
 
                 </div>
             </div>
