Adding media queries and creating a mobile version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main class="tarot-page__container">
             <h1 class="tarot-page__heading">Ask tarot anything</h1>
             <form class="tarot-page__input-form" action="/" method="POST">
-                <input type="text" placeholder="input your question here, be as descriptive as possible..." required id="user-input">
+                <input type="text" placeholder="input your question here..." required id="user-input">
                 <button type="submit" style="font-size: 24px;" id="user-submit-button">&#128302;</button>
             </form>
             <div class="tarot-card-display__flexbox">
