--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main class="tarot-page__container">
             <h1 class="tarot-page__heading">Ask tarot anything</h1>
             <form class="tarot-page__input-form" action="/" method="POST">
-                <input type="text" placeholder="input your question here..." required id="user-input">
+                <input type="text" placeholder="input your question here..." id="user-input" required>
                 <button type="submit" style="font-size: 24px;" id="user-submit-button">&#128302;</button>
             </form>
             <div class="tarot-card-display__flexbox">
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <dialog id="dialog-popup">
-                
+                <i class="fa-regular fa-circle-xmark"></i>
             </dialog>
         </main>
     </body>
