--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Ask any question, and recieve a powerful and insightful response from an AI-powered, wise and articulate tarot reader">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>&#128302;</text></svg>">
         <title>asktarotanything.com</title>
         <link rel="stylesheet" href="style.css">
@@ -293,7 +294,7 @@
                 </div>
             </div>
             <dialog id="dialog-popup">
-                <i class="fa-regular fa-circle-xmark"></i>
+                <!-- <i class="fa-regular fa-circle-xmark"></i> -->
             </dialog>
         </main>
     </body>
