Adding a robots.txt file for seo

--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
                     <img src="tarot-card-images/major-arcana/the-hierophant.jpg" alt="Tarot card image of the hierophant" id="the-hierophant" style="z-index: 6;">
                     <img src="/tarot-card-images/major-arcana/the-lovers.png" alt="Tarot card image of the lovers" id="the-lovers" style="z-index: 7;">
                     <img src="/tarot-card-images/major-arcana/the-chariot.jpg" alt="Tarot card image of the chariot" id="the-chariot" style="z-index: 8;">
-                    <img src="/tarot-card-images/major-arcana/strength.jpeg" alt="Tarot card image of strength" id="strength" style="z-index: 9;">
+                    <img src="/tarot-card-images/major-arcana/strength.webp" alt="Tarot card image of strength" id="strength" style="z-index: 9;">
                     <img src="/tarot-card-images/major-arcana/the-hermit.jpeg" alt="Tarot card image of the hermit" id="the-hermit" style="z-index: 10;">
-                    <img src="/tarot-card-images/major-arcana/wheel-of-fortune.jpeg" alt="Tarot card image of the wheel of fortune" id="wheel-of-fortune" style="z-index: 11;">
-                    <img src="/tarot-card-images/major-arcana/justice.jpg" alt="Tarot card image of justice" id="justice" style="z-index: 12;">
+                    <img src="/tarot-card-images/major-arcana/wheel-of-fortune.webp" alt="Tarot card image of the wheel of fortune" id="wheel-of-fortune" style="z-index: 11;">
+                    <img src="/tarot-card-images/major-arcana/justice.webp" alt="Tarot card image of justice" id="justice" style="z-index: 12;">
                     <img src="/tarot-card-images/major-arcana/the-hanged-man.jpg" alt="Tarot card image of the hanged man" id="the-hanged-man" style="z-index: 13;">
-                    <img src="/tarot-card-images/major-arcana/death.jpg" alt="Tarot card image of death" id="death" style="z-index: 14;">
+                    <img src="/tarot-card-images/major-arcana/death.webp" alt="Tarot card image of death" id="death" style="z-index: 14;">
                     <img src="/tarot-card-images/major-arcana/temperance.jpeg" alt="Tarot card image of temperance" id="temperance" style="z-index: 15;">
                     <img src="/tarot-card-images/major-arcana/the-devil.jpg" alt="Tarot card image of the devil" id="the-devil" style="z-index: 16;">
-                    <img src="/tarot-card-images/major-arcana/the-tower.jpg" alt="Tarot card image of the tower" id="the-tower" style="z-index: 17;">
+                    <img src="/tarot-card-images/major-arcana/the-tower.webp" alt="Tarot card image of the tower" id="the-tower" style="z-index: 17;">
                     <img src="/tarot-card-images/major-arcana/the-star.jpg" alt="Tarot card image of the star" id="the-star" style="z-index: 18;">
                     <img src="/tarot-card-images/major-arcana/the-moon.jpg" alt="Tarot card image of the moon" id="the-moon" style="z-index: 19;">
-                    <img src="/tarot-card-images/major-arcana/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
-                    <img src="/tarot-card-images/major-arcana/judgement.jpg" alt="Tarot card image of judgement" id="judgement" style="z-index: 21;">
-                    <img src="/tarot-card-images/major-arcana/the-world.jpg" alt="Tarot card image of the world" id="the-world" style="z-index: 22;">
+                    <img src="/tarot-card-images/major-arcana/the-sun.webp" alt="Tarot card image of the sun" id="the-sun" style="z-index: 20;">
+                    <img src="/tarot-card-images/major-arcana/judgement.webp" alt="Tarot card image of judgement" id="judgement" style="z-index: 21;">
+                    <img src="/tarot-card-images/major-arcana/the-world.webp" alt="Tarot card image of the world" id="the-world" style="z-index: 22;">
 
                     <!-- Wands -->
                     <img src="/tarot-card-images/wands/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" style="z-index: 23;">
