--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                     <img src="/tarot-card-images/major-arcana/the-chariot.jpg" alt="Tarot card image of the chariot" id="the-chariot" loading="lazy"  style="z-index: 8;">
                     <img src="/tarot-card-images/major-arcana/strength.webp" alt="Tarot card image of strength" id="strength" loading="lazy"  style="z-index: 9;">
                     <img src="/tarot-card-images/major-arcana/the-hermit.jpeg" alt="Tarot card image of the hermit" id="the-hermit" loading="lazy"  style="z-index: 10;">
-                    <img src="/tarot-card-images/major-arcana/wheel-of-fortune.webp" alt="Tarot card image of the wheel of fortune" id="wheel-of-fortune" loading="lazy"  style="z-index: 11;">
+                    <img src="/tarot-card-images/major-arcana/wheel-of-fortune.jpg" alt="Tarot card image of the wheel of fortune" id="wheel-of-fortune" loading="lazy"  style="z-index: 11;">
                     <img src="/tarot-card-images/major-arcana/justice.webp" alt="Tarot card image of justice" id="justice" loading="lazy"  style="z-index: 12;">
                     <img src="/tarot-card-images/major-arcana/the-hanged-man.jpg" alt="Tarot card image of the hanged man" id="the-hanged-man" loading="lazy"  style="z-index: 13;">
                     <img src="/tarot-card-images/major-arcana/death.webp" alt="Tarot card image of death" id="death" loading="lazy"  style="z-index: 14;">
                     <img src="/tarot-card-images/major-arcana/temperance.jpeg" alt="Tarot card image of temperance" id="temperance" loading="lazy"  style="z-index: 15;">
                     <img src="/tarot-card-images/major-arcana/the-devil.jpg" alt="Tarot card image of the devil" id="the-devil" loading="lazy"  style="z-index: 16;">
-                    <img src="/tarot-card-images/major-arcana/the-tower.webp" alt="Tarot card image of the tower" id="the-tower" loading="lazy"  style="z-index: 17;">
+                    <img src="/tarot-card-images/major-arcana/the-towerjpg" alt="Tarot card image of the tower" id="the-tower" loading="lazy"  style="z-index: 17;">
                     <img src="/tarot-card-images/major-arcana/the-star.jpg" alt="Tarot card image of the star" id="the-star" loading="lazy"  style="z-index: 18;">
                     <img src="/tarot-card-images/major-arcana/the-moon.jpg" alt="Tarot card image of the moon" id="the-moon" loading="lazy"  style="z-index: 19;">
-                    <img src="/tarot-card-images/major-arcana/the-sun.webp" alt="Tarot card image of the sun" id="the-sun" loading="lazy"  style="z-index: 20;">
-                    <img src="/tarot-card-images/major-arcana/judgement.webp" alt="Tarot card image of judgement" id="judgement" loading="lazy"  style="z-index: 21;">
-                    <img src="/tarot-card-images/major-arcana/the-world.webp" alt="Tarot card image of the world" id="the-world" loading="lazy"  style="z-index: 22;">
+                    <img src="/tarot-card-images/major-arcana/the-sun.jpg" alt="Tarot card image of the sun" id="the-sun" loading="lazy"  style="z-index: 20;">
+                    <img src="/tarot-card-images/major-arcana/judgement.jpg" alt="Tarot card image of judgement" id="judgement" loading="lazy"  style="z-index: 21;">
+                    <img src="/tarot-card-images/major-arcana/the-world.jpg" alt="Tarot card image of the world" id="the-world" loading="lazy"  style="z-index: 22;">
 
                     <!-- Wands -->
                     <img src="/tarot-card-images/wands/1-wands.jpg" alt="Tarot card image of the ace of wands" id="1-wands" loading="lazy"  style="z-index: 23;">
@@ -294,8 +294,9 @@
                 </div>
             </div>
             <dialog id="dialog-popup">
-                <!-- <i class="fa-regular fa-circle-xmark"></i> -->
+               
             </dialog>
+            <i class="fa-regular fa-circle-xmark"></i>
         </main>
     </body>
     </html>
