Removing the card looping effect cause it put to big a load on web page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <button type="submit" style="font-size: 24px" id="user-submit-button">
           &#128302;
         </button>
+        <button class="tarot-card__instructions"></button>
       </form>
       <div class="tarot-card-display__flexbox">
         <div class="tarot-card-display__container" id="card1">
