--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <script src="main.js" defer></script>
   </head>
   <body>
@@ -40,7 +44,9 @@
         <button type="submit" style="font-size: 24px" id="user-submit-button">
           &#128302;
         </button>
-        <button class="tarot-card__instructions"></button>
+        <button class="tarot-card__instructions">
+          <i class="fa-regular fa-circle-question"></i>
+        </button>
       </form>
       <div class="tarot-card-display__flexbox">
         <div class="tarot-card-display__container" id="card1">
@@ -75,7 +81,7 @@
         </div>
       </div>
       <dialog id="dialog-popup"></dialog>
-      <i class="fa-regular fa-circle-xmark"></i>
+      <i class="exit fa-regular fa-circle-xmark"></i>
     </main>
   </body>
 </html>
