Adding an instructions button

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
         <button type="submit" style="font-size: 24px" id="user-submit-button">
           &#128302;
         </button>
-        <button class="tarot-card__instructions">
-          <i class="fa-regular fa-circle-question"></i>
-        </button>
+        <div class="tarot-card__instructions">
+          <i class="fa-regular fa-circle-question">
+            <a href="/explanation.html"></a>
+          </i>
+        </div>
       </form>
       <div class="tarot-card-display__flexbox">
         <div class="tarot-card-display__container" id="card1">
@@ -81,7 +83,7 @@
         </div>
       </div>
       <dialog id="dialog-popup"></dialog>
-      <i class="exit fa-regular fa-circle-xmark"></i>
+      <i class="exit fa-regular fa-circle-xmark"> </i>
     </main>
   </body>
 </html>
