Adjustments to output and tarot explantion

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </button>
         <div class="tarot-card__instructions">
           <i class="fa-regular fa-circle-question">
-            <a href="/explanation.html"></a>
+            <a href="https://tarotexplanation.netlify.app/"></a>
           </i>
         </div>
       </form>
