Link is now working for tarot explanation

--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
           &#128302;
         </button>
         <div class="tarot-card__instructions">
-          <i class="fa-regular fa-circle-question">
-            <a href="https://tarotexplanation.netlify.app/"></a>
-          </i>
+          <a
+            href="https://tarotexplanation.netlify.app/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fa-regular fa-circle-question"></i>
+          </a>
         </div>
       </form>
       <div class="tarot-card-display__flexbox">
