--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </button>
         <div class="tarot-card__instructions">
           <a
-            href="https://tarotexplanation.netlify.app/"
+            href="https://faqtarot.netlify.app/"
             target="_blank"
             rel="noopener noreferrer"
           >
